--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
   <head>
     <meta charset="utf-8">
   </head>
-  <body style="background: black">
+  <body style="background: gray">
   </body>
 </html>
